--- a/settings/project.json
+++ b/settings/project.json
@@ -32,24 +32,32 @@
   "design-resolution-height": 640,
   "design-resolution-width": 1136,
   "excluded-modules": [
-    "CCSpriteDistortion",
-    "LabelOutline",
-    "ParticleSystem",
-    "TiledMap",
-    "Spine Skeleton",
-    "ScrollBar",
-    "ScrollView",
-    "Toggle",
+    "Audio",
+    "AudioSource",
+    "Collider",
+    "Dynamic Atlas",
+    "DragonBones",
+    "Graphics",
+    "Geom Utils",
+    "Label Effect",
+    "Mask",
+    "Mesh",
+    "MotionStreak",
+    "NodePool",
+    "Physics",
     "PageView",
     "PageViewIndicator",
+    "ParticleSystem",
+    "Renderer Texture",
     "Slider",
+    "ScrollBar",
+    "ScrollView",
+    "Spine Skeleton",
+    "StudioComponent",
+    "Toggle",
+    "TiledMap",
     "VideoPlayer",
     "WebView",
-    "MotionStreak",
-    "DragonBones",
-    "StudioComponent",
-    "Chipmunk",
-    "Geom Utils",
     "3D",
     "3D Primitive",
     "3D Physics/cannon.js",
